--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "26a3feff",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6e3aeb3e",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,7 @@
     "\n",
     "raw_folder_path = os.path.join('', 'raw')\n",
     "data_folder_path = os.path.join('', 'data')\n",
+    "graphics_folder_path = os.path.join('', 'graphics')\n",
     "\n",
     "lifts_file_name = 'lifts'\n",
     "runs_file_name = 'runs'\n",
@@ -56,14 +57,26 @@
     "runs_file_path = os.path.join(data_folder_path, str(runs_file_name) + str(pickle_extension))\n",
     "ski_areas_file_path = os.path.join(data_folder_path, str(ski_areas_file_name) + str(pickle_extension))\n",
     "\n",
-    "lifts = pd.read_csv(lifts_raw_file_path)\n",
-    "runs = pd.read_csv(runs_raw_file_path, low_memory=False)\n",
-    "ski_areas = pd.read_csv(ski_areas_raw_file_path)"
+    "if not os.path.exists(raw_folder_path):\n",
+    "    os.makedirs(raw_folder_path)\n",
+    "\n",
+    "if not os.path.exists(data_folder_path):\n",
+    "    os.makedirs(data_folder_path)\n",
+    "\n",
+    "if not os.path.exists(graphics_folder_path):\n",
+    "    os.makedirs(graphics_folder_path)\n",
+    "\n",
+    "if os.path.exists(lifts_raw_file_path) and os.path.exists(runs_raw_file_path) and os.path.exists(ski_areas_raw_file_path):\n",
+    "    lifts = pd.read_csv(lifts_raw_file_path)\n",
+    "    runs = pd.read_csv(runs_raw_file_path, low_memory=False)\n",
+    "    ski_areas = pd.read_csv(ski_areas_raw_file_path)\n",
+    "else:\n",
+    "    raise Exception"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b9ed09cd",
    "metadata": {},
    "outputs": [],
@@ -86,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "780d2fbe",
    "metadata": {},
    "outputs": [],
